--- a/docker/php-nginx/7.2/Dockerfile
+++ b/docker/php-nginx/7.2/Dockerfile
@@ -1,8 +1,3 @@
-#+++++++++++++++++++++++++++++++++++++++
-# Dockerfile for webdevops/php-nginx:7.2
-#    -- automatically generated  --
-#+++++++++++++++++++++++++++++++++++++++
-
 FROM webdevops/php:7.2
 
 ENV WEB_DOCUMENT_ROOT=/app \
@@ -14,11 +9,17 @@ ENV WEB_PHP_SOCKET=127.0.0.1:9000
 
 COPY conf/ /opt/docker/
 
+#add nginx
+RUN wget http://nginx.org/keys/nginx_signing.key && \
+  apt-key add nginx_signing.key && \
+  echo "deb http://nginx.org/packages/mainline/debian/ stretch nginx" >>  /etc/apt/sources.list.d/nginx.list && \
+  apt-get update
+
 RUN set -x \
     # Install nginx
     && apt-install \
-        nginx \
+        nginx=1.15.8-1~stretch \
     && docker-run-bootstrap \
     && docker-image-cleanup
 
-EXPOSE 80 443
+EXPOSE 80
